monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0277/A0277b.mc4
/* (c) https://github.com/MontiCore/monticore */
package  de.monticore.grammar.cocos.invalid.A0277;

grammar A0277b extends de.monticore.grammar.cocos.invalid.A0277.A0277a{

B = A;

}
